# linchpin

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  HANDOFF.md  README.md  SECURITY.md  fly.toml  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt  server.json
.claude/hooks/: session-start.sh
.github/workflows/: fly-deploy.yml  price-watch-cron.yml  tests.yml
case-studies/: CASE_STUDIES.md  UPWORK_FIVERR_PROFILE.md
config/: autonomy.yaml  event_routing.yaml  monitors.yaml
config/markets/: cl.yaml  co.yaml  eu.yaml  mx.yaml  uk.yaml  us.yaml
config/sites/: api.mercadolibre.com.yaml  discovered-retailer.test.yaml  example-blocked.test.yaml  example-retailer.test.yaml  meli-api.test.yaml
data/: sample_demand.csv  sample_demand_portfolio.csv  sample_demand_portfolio_olist.csv  sample_stock_snapshot.csv
docs/: AGENT_UI_DESIGN_PROMPT.md  DEPLOYMENT.md  HANDOFF.md  MCP_SERVER.md  README.md
documentation/: ACQUISITION_PLAYBOOK.md  AUDIT_EVIDENCE_DESIGN.md  AUDIT_EVIDENCE_MEMO.md  CAPABILITY_EXPANSION_PLAN.md  FAQ.md  FINANCE_MARKETING_BRIDGE.md  GETTING_STARTED.md  GRAPH_LESSONS.md  GTM_SUBMISSIONS.md  ICP_Y_DIMENSIONAMIENTO.md  KERN_ATLAS_SOMBREROS_SCM.md  KERN_BRAND_PRODUCT_BIBLE.md  KERN_CALENDARIO_CONTENIDO.md  KERN_IDENTIDAD_Y_FILOSOFIA.md  KERN_NIVEL_REFERENCIA_SCM.md  KERN_VIDEO_PLAYBOOK.md  KIT_PUBLICIDAD.md  LINCHPIN_3.0_PLAN.md  METHODOLOGY.md  MONETIZATION_BRIEF.md  README.md  TESTING_ENVIRONMENT.md  UI_DESIGN_BRIEF.md
documentation/legal/: README.md  dpa-lite.md  service-agreement-template.md
documentation/operator/: 01_role_charter.md  02_division_of_labor.md  03_methodologies.md  04_runbooks.md  05_deliverable_catalog.md  06_competency_map.md  07_setup_venta.md  09_checklist_lanzamiento.md  README.md  kern-au-nz-target-list.csv
documentation/paquetes/: README.md  auditoria-friccion-operacional.md  diagnostico-arranque.md  diagnostico-posicion-precios.md  evidencia-auditoria-inventario.md  growth-operacion.md  partner-odoo.md  proyecto-red-almacen.md  proyecto-sourcing.md  retainer-ejecutivo.md  scale-red-sop.md  sprint-liquidacion.md  starter-fundamentos.md
examples/: apply_replenishment.py  issue_mcp_key.py  monitor_planilla.py  plot_inventory.py  query_knowledge.py  run_agent.py  run_batch.py  run_capability_smoke.py  run_complete.py  run_constrained_plan.py  run_cost_to_serve.py  run_disruption_scan.py  run_free_scan.py  run_hats.py  run_integrated_plan.py  run_package.py  run_part1_part2.py  run_part3.py  run_part4.py  run_price_intel.py  run_scm_olist.py  run_scm_superstore.py  run_sop_cycle.py  run_sql_source.py  run_stocky_migration.py
excel-templates/: README.md
jobs/: abc_xyz_job.py  acceptance_sampling_job.py  cost_to_serve_deliverable.py  cost_to_serve_job.py  dea_job.py  deliverables.py  digest_job.py  digital_twin_job.py  disruption_scan_job.py  drp_job.py  earned_value_job.py  excel_replenishment_job.py  fefo_job.py  forecast_job.py  hats_job.py  intake.py  integrated_plan.py  landed_cost_job.py  launch_readiness_job.py  leadership.py  learning_curve_job.py  markdown_liquidation_job.py  monitors_job.py  network_design_job.py  notify.py  odoo_job.py  package_deliverable.py  price_intelligence.py  price_monitor.py  price_watch.py  price_watch_deliverable.py  pricing.py  qa.py  queuing_job.py  repricing.py  scheduled_jobs.py  scheduler.py  scheduling_job.py  seo_audit.py  seo_priority.py  (+8 more)
power-bi/: README.md
scm_agent/: README.md  __init__.py  autonomy.py  autonomy_promotion.py  citation_gate.py  community_summaries.py  embeddings.py  event_intent.py  events.py  graph_memory.py  intent.py  knowledge.py  llm.py  merchant_alerts.py  modes.py  monitors.py  orchestrator.py  package_specs.py  packages.py  registry.py  tool_options.py  tools.py  types.py
scripts/: benchmark_forecast_m5.py  generate_portfolio.py  generate_portfolio_from_olist.py  merge_khan_resilience.py  recluster_books_graph.py  regen_books_report.py  setup-test-env.sh
src/: __init__.py  audit_evidence.py  batch.py  benchmarks.py  client_profile.py  commercial_pricing.py  constraints.py  contingent_fee.py  cost_optimization.py  cost_to_serve.py  data_loader.py  decision_options.py  decision_support.py  deliverable.py  demand_variability.py  digital_twin.py  discrete_demand.py  disruption.py  distributions.py  drp.py  elasticity_batch.py  eoq.py  escalation.py  export.py  fill_rate.py  forecastability.py  forecasting_auto.py  guided.py  hat_council.py  hats.py  i18n.py  liquidation_calendar.py  mcdm.py  mcp_keys.py  multi_echelon.py  network_design.py  newsvendor.py  policies.py  powerbi_export.py  price_optimizer.py  (+17 more)
tests/: test_abc_xyz_tool.py  test_acceptance_sampling_tool.py  test_agent_deck.py  test_apply_replenishment_cli.py  test_audit_evidence.py  test_autonomy.py  test_autonomy_promotion.py  test_batch.py  test_benchmarks.py  test_capability_smoke.py  test_citation_gate.py  test_client_profile.py  test_commercial_pricing.py  test_connector_ledger.py  test_connector_meli_prices.py  test_connector_odoo.py  test_connector_odoo_prices.py  test_connector_odoo_tool.py  test_connector_shopify_prices.py  test_constraints.py  test_contingent_fee.py  test_cost_optimization.py  test_cost_to_serve.py  test_cost_to_serve_deliverable.py  test_cost_to_serve_tool.py  test_coverage_gate.py  test_data_loader.py  test_dea_tool.py  test_decision_options.py  test_decision_support.py  test_deliverable.py  test_demo.py  test_demo_price_scan.py  test_demo_scan.py  test_digest_job.py  test_digital_twin.py  test_digital_twin_tool.py  test_disruption.py  test_disruption_scan_job.py  test_disruption_scan_tool.py  (+153 more)
warehouse/: __init__.py  generator.py  html_export.py  model.py  qa.py
webapp/: README.md  __init__.py  app.py  decisions.py  demo_price_scan.py  demo_scan.py  how_it_works_data.py  how_it_works_page.py  mcp_auth.py  mcp_server.py  mcp_tool_specs.py  observability.py  offers.py  one_plan_page.py  operator_profile.py  paquetes_page.py  pricing_page.py  requirements.txt  security.py  tower_page.py
(+134 files in other folders)
