[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kern"
version = "2.9.0"
description = "Kern — an agentic supply-chain engine: inventory optimization, pricing and leadership analysis from a plain-language brief, grounded in a knowledge graph of 25 SCM sources."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "esstipi" }]
keywords = ["inventory", "supply-chain", "eoq", "safety-stock", "operations-research"]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "openpyxl>=3.1",
    # config/event_routing.yaml (F0, PR-4) -- "ruteo como dato": a small,
    # foundational config-parsing dependency the Tower's event routing cannot
    # degrade without (unlike the optional-extra heavy deps below, there is no
    # meaningful fallback for "the routing table failed to parse").
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
llm = [
    "anthropic>=0.39",
]
web = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
]
# Capability-expansion extras (modules degrade gracefully when absent).
dataquality = [
    "rapidfuzz>=3.0",
    "python-stdnum>=1.19",
]
mcdm = [
    "pymcdm>=1.3",
]
forecast = [
    "statsforecast>=2.0,<3",
    "utilsforecast>=0.2",
]
mcp = [
    "mcp>=1.0",
]
# src/state -- pandera schema contracts + a parquet engine for snapshot history.
# Degrades gracefully when absent (see src/state/system_state.py and store.py).
state = [
    "pandera>=0.32",
    "pyarrow>=15",
]
# jobs/scheduler.py + jobs/notify.py -- in-process job scheduling (F0, PR-3).
# APScheduler[sqlalchemy] brings the SQLite-backed SQLAlchemyJobStore the plan
# calls for; httpx is notify()'s webhook client. Both degrade gracefully when
# absent (see jobs/scheduler.py's SchedulerUnavailableError and
# jobs/notify.py's no-op-without-httpx path) -- pin verified 2026-07.
tower = [
    "APScheduler[sqlalchemy]>=3.11.3,<4",
    "httpx>=0.28",
]
# src/pricing_intel/acquire/structured.py + extract.py + normalize.py (PR-11).
# extruct is "semi-dormant" per the plan's own risk note -- structured.py
# isolates it behind an adapter with a hand-rolled ld+json fallback (lxml +
# chompjs for malformed JSON) so a broken extruct never blocks extraction.
# lxml is pinned explicitly even though extruct already pulls it in
# transitively, because the fallback imports it directly. rapidfuzz and
# python-stdnum (match/, a later PR) already live in the dataquality extra --
# not duplicated here.
pricing-intel = [
    "extruct==0.18.0",
    "lxml>=5.0",
    "price-parser>=0.5.1",
    "chompjs>=1.2",
    # jobs/price_intelligence.py's one-shot acquire step (PR-13):
    # src/pricing_intel/acquire/pdp_fetcher.py's live PDP GET. Already pinned
    # in the "tower" extra for notify()'s webhook client -- same version floor,
    # declared here too so `pip install .[pricing-intel]` alone is enough to
    # run the CLI against a live URL without also pulling in APScheduler.
    "httpx>=0.28",
]
# src/pricing_intel/match/probabilistic.py's documented future upgrade path
# (PR-14 spike, plan section 14 risk #4): splink>=4 installs cleanly and its
# DuckDB backend runs real linking predictions on this Windows py3.11 venv
# (splink==4.0.16 + duckdb==1.5.4, verified 2026-07) -- the wheel risk the
# plan flagged did NOT materialize. It is NOT imported by probabilistic.py
# yet: a naive comparison over raw title text mis-ranks a wrong-model
# variant above a correctly-reworded title (Jaro-Winkler is prefix/order
# sensitive; RapidFuzz's token_sort_ratio, this PR's shipped scorer, is
# not) -- see probabilistic.py's module docstring for the full writeup and
# the calibrated, hand-verified fallback that ships instead. rapidfuzz and
# python-stdnum (gtin.py/fuzzy.py, already used) live in the dataquality
# extra -- not duplicated here.
matching = [
    "splink>=4",
]
# src/elasticity_batch.py's per-SKU log-log OLS confidence interval (PR-16).
# Pure Python + numpy/scipy -- no C-toolchain risk (unlike pymc/pytensor,
# which the plan explicitly rejected for this PR -- see elasticity_batch.py's
# module docstring). Verified installs cleanly on this Windows py3.11 venv
# 2026-07 (statsmodels==0.14.6, one transitive dep: patsy==1.0.2). Degrades
# gracefully when absent: fit_sku_elasticity_ci() falls back to an equivalent
# closed-form OLS confidence interval via numpy + the already-core
# scipy.stats.t -- same normal-equations math, same numbers either way.
elasticity = [
    "statsmodels>=0.14",
]
# src/connectors/{shopify,meli}_prices.py's real transport (PR-18, P3
# repricing_multichannel). httpx already pinned by tower/pricing-intel --
# declared here too so `pip install .[repricing]` alone is enough for the
# live path. Deliberately NOT the plan's originally-listed ShopifyAPI/
# python-amazon-sp-api SDKs: both connectors are a thin, transport-agnostic
# httpx-style adapter (the same convention as src/connectors/http_client.py
# -- "hand it any httpx-style transport"), which avoids a heavy per-SDK
# dependency for two REST/GraphQL calls per channel. Odoo's price connector
# needs no new dep at all (stdlib xmlrpc.client, reused verbatim from
# src/connectors/odoo.py). [CRED] -- exercised only when real credentials
# (a live httpx.Client with the shop/seller's own token) are supplied; the
# test suite runs entirely against the InMemory stand-ins below, zero
# network, zero extra install.
repricing = [
    "httpx>=0.28",
]
# jobs/seo_audit.py's real site crawl (S1, PR-22, plan section 8 "Track B --
# SEO"). advertools wraps Scrapy (robots.txt-respecting, rate-limited by
# default) for the crawl itself; pyarrow is the plan's own declared pin for
# this extra (state's parquet engine, already installed transitively via the
# 'state' extra in this repo -- listed here too so `pip install .[seo]`
# alone is enough). Verified installs cleanly on this Windows py3.11 venv
# 2026-07 (advertools==0.18.0, scrapy==2.17.0, twisted==26.4.0 -- no
# C-toolchain/wheel risk). Structured-data extraction reuses the
# pricing-intel extra's extruct adapter (src/pricing_intel/acquire/
# structured.py) rather than duplicating it here -- install both extras
# together (`pip install .[seo,pricing-intel]`) for the full S1 audit;
# jobs/seo_audit.py raises a clear AdvertoolsUnavailableError (not a bare
# ImportError) when this extra is missing. Lighthouse (the plan's third
# named dependency) is a Node CLI binary, not a pip package -- checked via
# shutil.which at RUN time in jobs/seo_audit.py's run_lighthouse_audit,
# never declared here.
seo = [
    "advertools>=0.14",
    "pyarrow>=15",
]

[project.urls]
Homepage = "https://github.com/esstipi-debug/kern"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["src/__init__.py"]

[tool.coverage.report]
show_missing = true
# Raise over time; current measured coverage is ~90%.
fail_under = 80

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
# pyflakes (F), pycodestyle errors (E), isort (I)
select = ["E", "F", "I"]
ignore = ["E501"]  # line length handled by line-length above
